<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/query"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/query"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom" >
        <menu>
            <item
                android:id="@+id/query_name"
                android:icon="@drawable/ic_search_black_24dp"
                android:title="@string/search_by_name"
                app:showAsAction="ifRoom|collapseActionView" />

            <item
                android:id="@+id/query_own"
                android:icon="@drawable/ic_search_black_24dp"
                android:title="@string/search_by_year"
                app:showAsAction="ifRoom|collapseActionView" />

            <item
                android:id="@+id/query_area"
                android:icon="@drawable/ic_search_black_24dp"
                android:title="@string/search_by_area"
                app:showAsAction="ifRoom|collapseActionView" />

            <item
                android:id="@+id/query_population"
                android:icon="@drawable/ic_search_black_24dp"
                android:title="@string/search_by_population"
                app:showAsAction="ifRoom|collapseActionView" />

        </menu>
    </item>
    <item
        android:id="@+id/app_bar_switch"
        android:checkable="true"
        android:title="@string/up_down_order"
        android:icon="@drawable/ic_baseline_arrow_upward_24"
        app:showAsAction="always" />
    <item
        android:id="@+id/order"
        android:icon="@drawable/ic_baseline_sort_24"
        android:title="@string/order"
        app:showAsAction="ifRoom" >
        <menu>
        <item
            android:id="@+id/order_name"
            android:title="@string/sort_by_name"
            app:showAsAction="ifRoom|withText" />

        <item
            android:id="@+id/order_own"
            android:title="@string/sort_by_year"
            app:showAsAction="ifRoom|withText" />

        <item
            android:id="@+id/order_area"
            android:title="@string/sort_by_area"
            app:showAsAction="ifRoom|withText" />

        <item
            android:id="@+id/order_population"
            android:title="@string/sort_by_population"
            app:showAsAction="ifRoom|withText" />
        </menu>
    </item>

    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_baseline_settings_24"
        app:showAsAction="always" >
        <menu>
            <item
                android:id="@+id/language"
                android:title="@string/language"
                app:showAsAction="ifRoom|withText" />
            <item
                android:id="@+id/columns"
                android:title="@string/columns"
                app:showAsAction="ifRoom|withText" />

        </menu>
    </item>
</menu>